# ProjetM2Semestre2

./: .gitignore
BiologieSante1/: Projet_quantification_incertitude.ipynb
BiologieSante1/Cours/src/I - Modélisation des incertitudes-20200222/: atanNormal.py  copuleSklar.py  copuleStatistiquesOrdre.py  distributionFit.py  distributionIC.py  drawDistributions.py  echantillonnageComposees.py  empiricalCDF.py  exemplesCopules.py  kernelsmoothing1.py  kernelsmoothing2.py  kernelsmoothing3.py  kernelsmoothing4.py  kernelsmoothing5.py  ksHistogram.py  loisComposees.py  moments.py  momentsExo.py  script_Loidiscrete.py  script_Quantis1_2.py  visuData.py
BiologieSante1/Cours/src/II - Méthodes de simulation-20200222/: TestLCG.py  TestMT.py  gamma.py  importance_sampling.py  low_disc.py  mersenne.py  monteCarlo.py  monte_carlo.py  plotLattice.py  script_Loidiscrete.py  script_Quantis1_2.py  tiragePreferentiel.py  visuData.py  zig.py
BiologieSante1/Cours/src/III_1 - Méthodes spécifiques-20200222/: analyticalSampling.py  composite.py  compositeDistribution.py  convolution.py  form.py  formSorm.py  poisson.py  post_analytical.py  randomMixture.py  singauss.py  tangauss.py  transformation.py
BiologieSante1/Cours/src/III_2 - Analyse de sensibilité-20200222/: bornesFrechet.py  csiszar.py  factImpMC.py  indep_bernstein_bounds.py  monteCarloSensitivity.py  monte_carlo.py  script_SimulationSensitivityAnalysis.py  sensitivity2.py  visu_pdf.py
BiologieSante1/Cours/src/IV - Approximation de modèles-20200222/: kernel_ridge_gaussian_processes.py  least_squares_regression.py  orthonormal_polynomials_lars_openturns.py  sparsity_greedy_lasso.py
BiologieSante2/: Projet2_MechineauAlexandre.7z
BiologieSante2/Projet/: inv_stokes.edp
BiologieSante2/Projet1/: StokesP2P1.eps  inv_stokes.edp  inverse_stokes.edp  symbolic.wxmx
BiologieSante2/Projet2/: Projet 2_10_Alexandre.docx  code1.edp
BiologieSante2/Projet2/rapport/: main.tex
BiologieSante2/Projet2/rapport/src/: commande.tex  environnement.tex  front.tex  package.tex  pb0.tex
BiologieSante2/reference/: inv_stokes
Calcul Parallele/Projet1-MPI/: .gitignore  CMakeLists.txt  README  derived_type.f90  main.f90  main.tex  projet1.f90  projet_convergence  projet_par_v0  projet_par_v1  projet_seq
Calcul Parallele/Projet1-MPI/conf/: conf.nml
Calcul Parallele/Projet1-MPI/script/: Untitled.ipynb  conf.nml  conv.csv  plot_conv.py  post-traitement.py  resultat
Calcul Parallele/Projet1-MPI/src/: Test_Linear_array.f90  common.f90  constantes.f90  main.f90  main_parallel_v0.f90  main_parallel_v1.f90  main_sequential.f90  mpiCommon.f90  parametre.f90  projet1.f90  reqFunction.f90  studyAconv.f90
Calcul Parallele/Projet2-MPI/: common.f90  main_sequential.f90
MilieuxPoreux/: calcul_solution.wxmx
MilieuxPoreux/TPMACS-VF4-short-serveur/: CMakeLists.txt  ajout.f90  algebrelineaire.f90  assembletheta.f90  assemblevf4.f90  fsourcemod.f90  imprime.f90  init.f90  intmatvec.f90  laplacienvfmacs.f90  longr.f90  maillage.f90  matrixinitVF4.f90  parmmage.f90  plotvtkmod.f90  readme.f90  readmesh.f90
MilieuxPoreux/TPMACS-VF4-short-serveur/Lestests/: UPRINT  Ucalcule.vtk  Uexacte.vtk  mainvf4
Plasma/Projet/: .clang-format  .gitignore  CMakeLists.txt  Projet.pro  analyse.pvsm  clip.pvsm  conanfile.txt  plotting.pvsm
Plasma/Projet/src/: clip.cpp  convergence.cpp  grid.cpp  grid.h  gridfd.cpp  gridfd.h  integrate.h  keen_wave.cpp  main.cpp  solver.h  solverdf.cpp  solverdf.h  solverfd.cpp  solverfd.h  solversl.cpp  solversl.h  solversl_keen.cpp  solversl_keen.h
Plasma/build-Projet-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile
