CMAKE_MINIMUM_REQUIRED(VERSION 3.9.6)
PROJECT(MPI_Projet1)

ENABLE_LANGUAGE(Fortran)
FIND_PACKAGE(MPI REQUIRED COMPONENTS Fortran)

ADD_DEFINITIONS(${MPI_Fortran_COMPILE_FLAGS})
INCLUDE_DIRECTORIES(${MPI_Fortran_INCLUDE_DIRS})
LINK_DIRECTORIES(${MPI_FortranLIBRARY_DIRS})

ADD_EXECUTABLE(MPI_Projet1
			   src/main.f90
			   src/constantes.f90
			   src/parametre.f90)
TARGET_LINK_LIBRARIES(MPI_Projet1 MPI::MPI_Fortran)

ADD_CUSTOM_COMMAND(
		TARGET ${PROJECT_NAME} POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy
		${CMAKE_SOURCE_DIR}/conf/conf.nml
		$<TARGET_FILE_DIR:${PROJECT_NAME}>)

ADD_CUSTOM_COMMAND(
		TARGET ${PROJECT_NAME} POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy
		${CMAKE_SOURCE_DIR}/script/post-traitement.py
		$<TARGET_FILE_DIR:${PROJECT_NAME}>)

MESSAGE("Compiler used : ${MPI_Fortran_COMPILER}")
MESSAGE("Source dir    : ${CMAKE_SOURCE_DIR}")
MESSAGE("Binary dir    : ${CMAKE_CURRENT_BINARY_DIR}")
MESSAGE("How to run    : ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} EXECUTABLE ${MPIEXEC_POSTFLAGS} ARGS")